MyFirstProject/src/objects/SALARY_DETAIL__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_account_number__c</fullName>
        <label>Bank account number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <description>mandatory</description>
        <label>Basic</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_To__c</fullName>
        <label>EMPLOYEE</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>salary detail</relationshipLabel>
        <relationshipName>salary_detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_salary__c</fullName>
        <formula>Total_Earning__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <description>Mandatory</description>
        <label>HRA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <description>Mandatory</description>
        <label>PF Deduction</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_ID__c</fullName>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Salary_credit_Date__c</fullName>
        <label>Salary credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_allowance__c</fullName>
        <description>Mandatory</description>
        <label>Special allowance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earning__c</fullName>
        <formula>Basic__c  + HRA__c +  Special_allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SALARY DETAIL</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SALARY DETAIL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>salary detail</pluralLabel>
    <recordTypes>
        <fullName>bank</fullName>
        <active>true</active>
        <label>bank</label>
    </recordTypes>
    <recordTypes>
        <fullName>bank2</fullName>
        <active>false</active>
        <label>bank2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Unique_bank_no</fullName>
        <active>true</active>
        <description>You can&apos;t change bank no.</description>
        <errorConditionFormula>ISCHANGED( Bank_account_number__c )</errorConditionFormula>
        <errorDisplayField>Bank_account_number__c</errorDisplayField>
        <errorMessage>Account Number can not be change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>salary</fullName>
        <active>true</active>
        <errorConditionFormula>Credited_To__r.Is_Active__c ==FALSE</errorConditionFormula>
        <errorMessage>Salary cannot be processed for inactive employees.</errorMessage>
    </validationRules>
</CustomObject>